[project]
name = "antheia-audio-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Barhrhouj Hamza",email = "barhrhoujhamza@gmail.com"}
]
readme = "README.md"
requires-python =  ">=3.11,<3.13" 
dependencies = [
    "faster-whisper (>=1.2.0,<2.0.0)",
    "soundcard (>=0.4.4,<0.5.0)",
    "numpy (>=1.24.0,<1.25.0)",
    "matplotlib (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
torch = { version = "*", optional = true }
